# judging-the-intent

./: .gitignore  .gitmodules  LICENSE  README.md  annotate_docs.py  annotate_scoreddocs.py  create_db.py  dna_prompt.py  eval.py  eval_judgments.py  main.py  pyproject.toml  rankers.py
db/: schema.py
parsers/: phi4.py
src/judging_the_intent/: __init__.py  annotate.py  compare_judgments.py  create_db.py  rank_experiment.py
src/judging_the_intent/db/: __init__.py  schema.py
src/judging_the_intent/db/migrations/: migration0.py  migration1.py
src/judging_the_intent/util/: charts.py  compare_judgments.py  dna_prompt.py  eval.py  inspect_judgment.py  parsers.py  rank.py  tokenizers.py
