[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "judging-the-intent"
version = "0.2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ir-datasets",
    "ir_datasets_subsample @ git+https://github.com/webis-de/ecir25-corpus-subsampling.git#subdirectory=ir_datasets_subsample",
    "tqdm",
    "requests",
    "peewee",
    "psycopg2-binary",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "python-terrier>=0.13.0",
    "transformers>=4.56.1",
    "protobuf>=6.32.0",
    "sentencepiece>=0.2.1",
    "pyterrier_t5 @ git+https://github.com/terrierteam/pyterrier_t5.git",
    "pyterrier_colbert @ git+https://github.com/terrierteam/pyterrier_colbert.git",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.6",
]
